Preventing Header submenu to overlap bug
Reported at issues. This will prevent the Header menu hover state to overlap with social icons inside footer, this can be seen while in search results without a valid result.

--- a/src/css/components/_header.css
+++ b/src/css/components/_header.css
@@ -23,6 +23,11 @@
   width: 100%;
 }
 
+/* Submenu overlap fix */
+.submenu level-2 {
+  z-index: 1;
+}
+
 @media (max-width: 1150px) and (min-width: 767px) {
   .header__column {
     width: 100%;
